--- a/style.css
+++ b/style.css
@@ -7,3 +7,22 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
+.filter>button {
+    border: none;
+    background-color: #3676ee;
+    color: white;
+    margin: 7.5px;
+    width: 100px;
+    height: 35px; 
+    font-size: 1rem;
+    border-radius: 5px;
+}
+
+.filter>button:hover {
+    background-color: #2d63c7;
+}
+
+.filter>button:active {
+    box-shadow: 0px 0px 1px 3px rgba(79, 186, 228, 0.5);
+}
