--- a/style.css
+++ b/style.css
@@ -26,3 +26,35 @@ body {
 .filter>button:active {
     box-shadow: 0px 0px 1px 3px rgba(79, 186, 228, 0.5);
 }
+
+img {
+    width: 300px;
+    height: 180px;
+    border-radius: 8px 8px 0px 0px;
+}
+
+.items {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 30px;
+}
+
+.item__description {
+    background-color: black;
+    height: 45px;
+    border-radius: 0px 0px 8px 8px;
+    margin-bottom: 15px;
+    position: relative;
+    bottom: 5px;
+    z-index: 2;
+    color: white;
+    display: grid;
+    grid-template-columns: 8fr 1fr;
+    padding: 7.5px 10px 0px 10px;
+}
+
+.item__description>p {
+    margin: 0;
+}
+
